# saas-analytics-engineering-pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: secret-scan.yml  tests.yml
app/: streamlit_dashboard.py
config/: data_contracts.yaml  settings.yaml
docs/: ROADMAP.md  architecture.md  data_contracts.md  data_model.md  data_quality_report.md  deployment.md  interview_guide.md  kpi_definitions.md  run_summary.md
docs/goal_runs/: 2026-05-14_data_engineering_skill_sprint.md
docs/skill_sprint/: week_01_sql_query_pack_saas.md
src/saas_analytics/: bootstrap.py  cli.py  config.py  contracts.py  generate_data.py  health.py  markdown.py  paths.py  run.py  warehouse.py
tests/: test_cli.py  test_pipeline.py  test_project_config.py
